--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,18 @@
   cursor: pointer;
  }
 
+ .button-lang {
+  width: 150px;
+  height: 40px;
+  margin: 0 auto;
+  border: none;
+  font-size: 1.25em;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: var(--green);
+  color: var(--color-tone-1);
+ }
+
  .less {
   flex: 0.5;
  }
