--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,8 @@
   font-weight: bold;
   border-radius: 5px;
   background-color: var(--green);
-  color: var(--color-tone-1);
+  color: #ffffff;
+  cursor: pointer;
  }
 
  .less {
